# cli-tools

./: .gitignore  README.md  cli_shard.py  cli_sview.py  install.py  pyproject.toml  requirements_shard.txt
src/cli_tools/: cli.py  core.py
