[project]
name = "cli-tools"
version = "0.1.0"
description = "Manager custom cli"
authors = [
    { name = "Honi Zhang", email = "zhang.h.n@foxmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "click",
    "requests",
    "PyYaml",
    "prettytable"
]

[project.scripts]
ctl = "cli_tools.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
